@@ -23,8 +23,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junitpioneer.jupiter.cartesian.CartesianTest;
@@ -123,7 +121,7 @@ public class CalibrationRotationPipeTest {
                                     0.09625562194891251,
                                     -0.1860797479660746
                                 }),
-                        new double[] {},
+                        new double[0],
                         List.of(),
                         new Size(),
                         1,
@@ -151,13 +149,13 @@ public class CalibrationRotationPipeTest {
         var rotatedDistortedPoints =
                 distortedOriginalPoints.stream()
                         .map(it -> rot.rotatePoint(it, frameProps.imageWidth, frameProps.imageHeight))
-                        .collect(Collectors.toList());
+                        .toList();
 
         // Now let's instead rotate then distort
         var rotatedOriginalPoints =
                 Arrays.stream(originalPoints)
                         .map(it -> rot.rotatePoint(it, frameProps.imageWidth, frameProps.imageHeight))
-                        .collect(Collectors.toList());
+                        .toList();
 
         var distortedRotatedPoints =
                 OpenCVHelp.distortPoints(
@@ -288,7 +286,7 @@ public class CalibrationRotationPipeTest {
                                     0.04625562194891251,
                                     -0.0860797479660746
                                 }),
-                        new double[] {},
+                        new double[0],
                         List.of(),
                         new Size(),
                         1,
@@ -310,9 +308,7 @@ public class CalibrationRotationPipeTest {
         // rotate and try again
         var rotAngle = ImageRotationMode.DEG_90_CCW;
         var rotatedDistortedPoints =
-                distortedCorners.stream()
-                        .map(it -> rotAngle.rotatePoint(it, 1280, 720))
-                        .collect(Collectors.toList());
+                distortedCorners.stream().map(it -> rotAngle.rotatePoint(it, 1280, 720)).toList();
         pipe.setParams(
                 new SolvePNPPipeParams(
                         coeffs.rotateCoefficients(rotAngle), TargetModel.kAprilTag6p5in_36h11));
@@ -327,14 +323,11 @@ public class CalibrationRotationPipeTest {
         System.out.println("Base: " + pose_base);
         System.out.println("rot-unrot: " + pose_unrotated);
 
-        Assertions.assertEquals(pose_base.getX(), pose_unrotated.getX(), 0.01);
-        Assertions.assertEquals(pose_base.getY(), pose_unrotated.getY(), 0.01);
-        Assertions.assertEquals(pose_base.getZ(), pose_unrotated.getZ(), 0.01);
-        Assertions.assertEquals(
-                pose_base.getRotation().getX(), pose_unrotated.getRotation().getX(), 0.01);
-        Assertions.assertEquals(
-                pose_base.getRotation().getY(), pose_unrotated.getRotation().getY(), 0.01);
-        Assertions.assertEquals(
-                pose_base.getRotation().getZ(), pose_unrotated.getRotation().getZ(), 0.01);
+        assertEquals(pose_base.getX(), pose_unrotated.getX(), 0.01);
+        assertEquals(pose_base.getY(), pose_unrotated.getY(), 0.01);
+        assertEquals(pose_base.getZ(), pose_unrotated.getZ(), 0.01);
+        assertEquals(pose_base.getRotation().getX(), pose_unrotated.getRotation().getX(), 0.01);
+        assertEquals(pose_base.getRotation().getY(), pose_unrotated.getRotation().getY(), 0.01);
+        assertEquals(pose_base.getRotation().getZ(), pose_unrotated.getRotation().getZ(), 0.01);
     }
 }
